# langchain-learning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/: runoob.com.langchain教程.md
notebooks/: 00-setup.ipynb  enhancement-plan.md
notebooks/01-core-concepts/: 00-langchain-overview.ipynb  01-chat-models.ipynb  02-prompt-parsers.ipynb  03-lcel.ipynb  04-tools.ipynb  05-streaming.ipynb  06-middleware.ipynb  07-agent.ipynb  08-messages-runnable.ipynb  09-callbacks.ipynb  10-document.ipynb  11-structured-output.ipynb
notebooks/01-core-concepts/.ipynb_checkpoints/: 01-chat-models-checkpoint.ipynb
notebooks/03-runoob-tutorials/: README.md
notebooks/03-runoob-tutorials/01-basics/: 00-intro.ipynb  01-env-setup.ipynb  02-deepseek.ipynb
notebooks/03-runoob-tutorials/02-agent-core/: 00-first-agent.ipynb  01-init-chat-model.ipynb  01-模型调用.ipynb  02-model-params.ipynb  03-Chat Model 高级用法.ipynb  03-model-advanced.ipynb  04-messages.ipynb  04-消息类型.ipynb  05-tool-basics.ipynb  05-定义工具.ipynb  06-tool-advanced.ipynb  06-工具高级特性.ipynb  07-state-store.ipynb  07-工具访问.ipynb  08-create-agent.ipynb  09-Agent 工作流程.ipynb  09-agent-workflow.ipynb  10-AgentState 状态管理.ipynb  10-agent-state.ipynb  11-system-prompt.ipynb  11-提示词.ipynb  12-streaming.ipynb  12-流式输出.ipynb  13-structured-output.ipynb  13-结构化输出.ipynb  14-output-strategies.ipynb  14-输出策略.ipynb
notebooks/03-runoob-tutorials/03-middleware/: 00-middleware-concepts.ipynb  01-before-after-model.ipynb  02-wrap-model-call.ipynb  03-wrap-tool-call.ipynb  04-before-after-agent.ipynb
notebooks/03-runoob-tutorials/04-memory/: 00-checkpointer.ipynb  01-store.ipynb  (+1 more)
src/langchain_learning/: __init__.py  llm.py
(+9 files in other folders)
