[project]
name = "langchain-learning"
version = "0.1.0"
description = "LangChain 系统化学习项目"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langgraph>=0.4,<0.5",
    "langsmith>=0.3,<0.4",
    "chromadb>=1.0,<2.0",
    "pypdf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.28,<0.29",
]
