[project]
name = "langchain-learning"
version = "0.1.0"
description = "LangChain 系统化学习项目 — 基于官方 v1 文档"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3",
    "chromadb>=1.0,<2.0",
    "pypdf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "tiktoken>=0.9,<1.0",
    "jupyter>=1.1,<2.0",
    "ipykernel>=6.29,<7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["ruff>=0.11,<0.12"]
